--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://Andrew-Hany.github.io/Thanawy_Marimena",
+  "homepage": "https://Andrew-Hany.github.io/Thanawy_Marimena",
   "name": "sales_plateform",
   "version": "0.1.0",
   "private": true,
@@ -40,5 +40,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  }
 }
