--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
-   "clean" : "gh-pages-clean",
-    "start": "react-scripts start",
+    "deploy": "gh-pages -d build",
+    "clean": "gh-pages-clean",
+    "start": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
